<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editaPerfil2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OpcionesMenu.EditaPerfil" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/edita_perfiL_titulo"
        android:textSize="50px"
        android:fontFamily="@font/worksans"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="395dp"
        android:layout_height="157dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184">

        <ImageView
            android:id="@+id/fotoPerfil"
            android:layout_width="281dp"
            android:layout_height="159dp"
            android:layout_weight="1"
            android:src="@drawable/icono_nombres" />

        <Button
            android:id="@+id/btnSubirFoto"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/celeste"
            android:text="@string/edita_perfiL_boton_foto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="227dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/etiquetaTelefono"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:padding="5dp"
            android:text="@string/edita_perfiL_etiqueta_telefono" />

        <EditText
            android:id="@+id/nuevoTelef"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:maxLength="9"
            android:ems="10"
            android:hint="@string/edita_perfiL_hint_telef"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnRegistrarEdicion"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edita_perfiL_boton_editar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>